shift switch button on home page is working.

--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -68,7 +68,13 @@
     <div class="flex-1">
       {% if shift.start is not None %}
     <h4 class="card-title mb-4">Todays Shift {{shift.start}} -  {{shift.end}}</h4>
-    <button class ="btn btn-primary px-4 clock_in" type="submit" name="to_be_taken" value="{{shift.pk}}"> Request to be taken </button>
+    
+        {% if shift.to_be_taken == False %}
+    
+        <button class ="btn btn-primary px-4 clock_in" type="submit" name="to_be_taken" value="{{shift.pk}}"> Request to be taken </button>
+        {%else%}
+        <button class ="btn btn-primary px-4 clock_in" type="submit" name="to_be_taken" value="{{shift.pk}}"> Cancel to be taken </button>
+        {%endif%}
 
       {%else%}
       <h4 class="card-title mb-4">Todays Shift </h4>
