--- a/walrus/walrus/templates/shift_switch.html
+++ b/walrus/walrus/templates/shift_switch.html
@@ -20,8 +20,11 @@
     <div class="ms-3">
     <div class="row my-4">
     <div class="col-md-12">
-
     <a href="{% url 'home' %}" class="btn btn-primary go_back">Go Back</a>
+    <form method="POST">
+        {% csrf_token %}
+    
+    
     <h3>Shifts Available:</h3>
     {% for s in shifts %}
         <div class="card">
@@ -36,10 +39,12 @@
                 <br>
                 <h6>Assigned Employee: {{ s.user.first_name }}</h6>
                 <br>
-                <a href="/swap_shift/{{ employee.pk }}/{{ s.pk }}" class="btn btn-primary swap">Pick Up Shift</a>
+                <button class="btn btn-primary swap" name="button" value="{{s.pk}}">Pick Up Shift</button>
             </div></div></div></div>
         </div>
     {% endfor %}
+    </form>
+
     </div></div></div></div></div></div></div></div></div>
     </html>
 </html>
