back button on manager tool page.

--- a/walrus/walrus/templates/manager_tools.html
+++ b/walrus/walrus/templates/manager_tools.html
@@ -2,7 +2,7 @@
 <div>
   </div>
 <head>
-  
+   
   <link rel="stylesheet" href="{% static '/css/manager_tools.css' %}">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
@@ -12,7 +12,8 @@
 <body class="parent-container">
 
         <form class="button-container" action="{% url 'manager_tools_redirect' %}" method="post">
-          
+          <a href="{% url 'home' %}" class="back_button">Go Back</a>
+
         <h1 class="heading">Manager Tools</h1>
           {% csrf_token %}
           <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/add_task/">Add Tasks</button>
