--- a/walrus/walrus/templates/manage_roles.html
+++ b/walrus/walrus/templates/manage_roles.html
@@ -1,24 +1,109 @@
 {% block content %}
 
-<head>
-    <title>Roles/Groups Management</title>
-</head>
-<body>
-    <form action="" method="post">
-        {% csrf_token %}
-        <!-- TO DO: Finish this-->
-        {{ create_role_form }}
-        {% if msg %}
-           <p> {{ msg }}</p>
-        {% endif %}
-   
-        <button type="submit" name="submit_role" value="submit">SUBMIT</button>
-    
-    </form>
 
-    <form action="" method="post"> 
-        {% csrf_token %}
-        {{ assign_role_form }}
-    <button type="submit" name="assign_role" value="assign">Assign Position</button>
+<html>
+
+{% load static %}
+<html lang="en"><head>
+  <meta charset="utf-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="{% static '/css/home_page.css' %}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+ 
+  </head>
+  <body style="">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.2.96/css/materialdesignicons.min.css" integrity="sha512-LX0YV/MWBEn2dwXCYgQHrpa9HJkwB+S+bnBpifSOTO1No27TqNMKYoAn6ff2FBh03THAzAiiCwQ+aPX+/Qt/Ow==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="{% static '/css/form.css' %}">
+
+
+  <form method="POST">
+    {% csrf_token %}
+  
+  <div class="container">
+  <div class="row">
+  <div class="col-xl-9">
+  <div class="card-body pb-0">
+  <div class="row align-items-center">
+  <div class="col-md-9">
+  <div class="ms-3">
+  <div class="row my-4">
+  <div class="col-md-12">
+  <div>
+    <a href="{% url 'home' %}" class="back_button">Go Back</a>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  <h4>Roles/Groups Management</h4>
+
+  <div class="card">
+    <div class="tab-content p-4">
+    <div class="tab-pane active show" id="projects-tab" role="tabpanel">
+    <div class="d-flex align-items-center">
+    <div class="flex-1">
+        
+        <body>
+            <form action="" method="post">
+                {% csrf_token %}
+                <!-- TO DO: Finish this-->
+                {{ create_role_form }}
+                {% if msg %}
+                   <p> {{ msg }}</p>
+                {% endif %}
+           
+                <button type="submit" class="btn btn-primary px-4" name="submit_role" value="submit">SUBMIT</button>
+            
+            </form>
+        
+            <form action="" method="post"> 
+                {% csrf_token %}
+                {{ assign_role_form }}
+            <button type="submit" class="btn btn-primary px-4" name="assign_role" value="assign">Assign Position</button>
+        </body>
+    </form>
+    </div>
+    </div>
+    </div>
+    </div>
+
+  </form>
+
+
+    </div>
+</div>
+</div>
+</div>
+</div>
+    </div>
+    </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </ul>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+ </script><script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript"> 
+  </script>
+  </form>
+  </body></html>
 </body>
+</html>
+
+
+
+
 {% endblock %}
