role deletion is displayed to the user

--- a/walrus/walrus/templates/manage_roles.html
+++ b/walrus/walrus/templates/manage_roles.html
@@ -63,12 +63,12 @@
                 {% csrf_token %}
                 {{ assign_role_form }}
             <button type="submit" class="btn btn-primary px-4" name="assign_role" value="assign">Assign Position</button>
-        
+            </form> 
             <form method="post">
                 {% csrf_token %}
                 {{ delete_role_form }}
                 <button type="submit" class="btn btn-primary px-4" name="delete_role" value="delete">Remove Position</button>
-            </form>"
+            </form>
         </body>
     </form>
     </div>
