--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -43,13 +43,15 @@
       <br>
       <a href="{%url 'calendar' %}">Calendar </a>
       <br>
+      <a href= "/list_tasks/" > All Tasks </a>
+      <br>
       <a href="/shift_switch/{{ employee.pk }}">Shift Switch</a>
       <br>
       {%if user.employee.is_manager == 'Yes' %}
       <a href="{% url 'manager_tools' %}">Manager Tools</a>
       <br>
       {%endif%}
-      <a  href= "/home/{{ employee.pk }}/availability" > Avilability </a>
+      <a  href= "/home/{{ employee.pk }}/availability" > Availability </a>
       <br>
       <a  href= "/home/{{ employee.pk }}/request_time_off" > Request Time off </a>
       <p><a href="{% url 'logout' %}">Log Out</a></p>
