--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -4,12 +4,14 @@
 {% load static %}
 
 <html lang="en"><head>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/htmx.org@1.9.6"></script>
   <meta charset="utf-8">
 <form method="POST">
   {% csrf_token %}
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="{% static '/css/home_page.css' %}">
+ <!-- <link rel="stylesheet" href="{% static '/css/home_page.css' %}">-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
  
   </head>
@@ -60,6 +62,18 @@
     </div>
   </div>
 </div>
+<div class="container px-5 gap-6">
+  <h1 class=" ">New Notifications:</h1>
+    <div class=" ">
+      <div class=" ">
+       You have: <label class= " " id = "notification"> </label> new Tasks
+  
+        <div hx-post="{% url 'walrus:notify' %}" hx-trigger="every 4s" hx-target="#notification"></div>
+
+        </div>
+      </div>
+    </div>
+  </div> 
 </div>
   <div class="card">
     <div class="tab-content p-4">
