fixed phone number bug.

--- a/walrus/walrus/templates/edit_profile.html
+++ b/walrus/walrus/templates/edit_profile.html
@@ -77,7 +77,7 @@
     <h6 class="mb-0">Phone</h6>
     </div>
     <div class="col-sm-9 text-secondary">
-    <input type="text" class="form-control" id=phone_number name=phone_number value="{{user.employee.phone_number}} " required>
+    <input type="text" class="form-control" maxlength="12" id=phone_number name=phone_number value="{{user.employee.phone_number}} " required>
     </div>
     </div>
    
