--- a/walrus/walrus/templates/base.html
+++ b/walrus/walrus/templates/base.html
@@ -3,8 +3,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% block title %}Basic Login System Test{% endblock %}</title>
+  <script src="https://unpkg.com/htmx.org@1.9.9" integrity="sha384-QFjmbokDn2DjBjq+fM+8LUIVrAgqcNW2s0PjAxHETgRn9l4fvX31ZxDxvwQnyMOX" crossorigin="anonymous"></script>
+
 </head>
-<body>
+<body hx-headers='{"X-CSRFToken":"{{ csrf_token}}"}'>
   <main>
     {% block content %}
     {% endblock %}
