--- a/walrus/walrus/templates/schedule_employee.html
+++ b/walrus/walrus/templates/schedule_employee.html
@@ -1,5 +1,8 @@
-<html>
+{%extends 'base.html' %}
+{% block content %}
 
+<html>
+ 
 {% load static %}
 <html lang="en"><head>
   <meta charset="utf-8">
@@ -14,8 +17,7 @@
   <link rel="stylesheet" href="{% static '/css/form.css' %}">
 
 
-  <form method="POST">
-    {% csrf_token %}
+  
   
   <div class="container">
   <div class="row">
@@ -35,82 +37,20 @@
   </div>
   </div>
   </div>
-  <h4>Scheduling</h4>
 
+  <h4>Scheduling</h4>
   <div class="card">
     <div class="tab-content p-4">
-    <div class="tab-pane active show" id="projects-tab" role="tabpanel">
-    <div class="d-flex align-items-center">
-    <div class="flex-1">
-        <form method="POST">
-          <h3>Employees avilabilty</h3>
-            {% csrf_token %}
-        {{ search_form.as_p }}
-        <button name="search"> Submit </button>
-        </form>
-        
-        <br>
-        <table class="table align-middle table-nowrap table-hover mb-0 ">
-          <thead class="table-light">
-              <tr>
-                  <th></th>
-                  <th>Sunday</th>
-                  <th>Monday</th>
-                  <th>Tuesday</th>
-                  <th>Wednesday</th>
-                  <th>Thursday</th>
-                  <th>Friday</th>
-                  <th>Saturday</th>
-              </tr>
-          </thead>
-          <tbody>
-              <tr>
-          <td>Start</td>
-          <td>{{ avil.sunday_start }}</td>
-          <td>{{ avil.monday_start }}</td>
-          <td>{{ avil.tuesday_start }}</td>
-          <td>{{ avil.wednesday_start }}</td>
-          <td>{{ avil.thursday_start }}</td>
-          <td>{{ avil.friday_start }}</td>
-          <td>{{ avil.saturday_start }}</td>
-          </tr>
+      <div class="tab-pane active show" id="projects-tab" role="tabpanel">
+        <div class="d-flex align-items-center">
+          <div class="flex-1">
 
-          <tr>
-              <td>End</td>
-              <td>{{ avil.sunday_end }}</td>
-              <td>{{ avil.monday_end }}</td>
-              <td>{{ avil.tuesday_end }}</td>
-              <td>{{ avil.wednesday_end }}</td>
-              <td>{{ avil.thursday_end }}</td>
-              <td>{{ avil.friday_end }}</td>
-              <td>{{ avil.saturday_end }}</td>
-              </tr>
-          </tbody>
-          </table>
-           
-            
-            <br>
-            <h5>Requests offs:</h5>
-            
-            {%for request in requests_off%}
-            {{request.start}} to {{request.end}}
-            <br>
-            Reason: {{request.description}}
-            <br>
-            {% endfor %}
-            
-            <form method="POST">
+        {%include 'htmx_fragments/avil_s.html'%}
+        {%include 'htmx_fragments/create_shift.html'%}
 
-   
- 
-    <br> 
-                <h3>schedule an employee</h3>
             
-                {% csrf_token %}
-            {{ schedule_form.as_p }}
-            <button name="save_shift"> Submit </button>
-            </form>
         
+
         
             <form method="POST">
         
@@ -195,7 +135,7 @@
   </body></html>
 </body>
 </html>
-
+{% endblock %}
 
 
 
