--- a/walrus/walrus/templates/schedule_employee.html
+++ b/walrus/walrus/templates/schedule_employee.html
@@ -47,69 +47,12 @@
 
         {%include 'htmx_fragments/avil_s.html'%}
         {%include 'htmx_fragments/create_shift.html'%}
-
+        {%include 'htmx_fragments/week_schedule.html'%}
             
         
 
         
-            <form method="POST">
-        
-                <h3>All shifts for the week of: </h3>
             
-                {% csrf_token %}
-            {{ select_week_form.as_p }}
-            <button name="select_week_form"> Submit </button>
-            </form>
-            <table class="table align-middle table-nowrap table-hover mb-0 ">
-                <thead class="table-light">
-                <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Sunday</th>
-                <th scope="col">Monday</th>
-                <th scope="col">Tuesday</th>
-                <th scope="col">Wednesday</th>
-                <th scope="col">Thursday</th>
-                <th scope="col">Friday</th>
-                <th scope="col">Saturday</th>
-
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-
-                    {% for key, list in dict.items %} 
-
-                    
-                        {%for attribute in list%}
-                        
-                          {% if forloop.first %}
-                          <td>{{attribute}}</td>
-                          
-                          {%else%}
-
-                            {% if attribute == None %}
-                            <td></td>
-                            {%else%}
-                            {{attribute.day_of_week}}
-                            <td>{{attribute.start}} - {{attribute.end}}
-                              <br>
-                              <button class ="btn btn-primary px-4" type="submit" name="delete" value="{{attribute.pk}}">Delete </button>
-                             </td>
-                            {% endif %}
-                        {% endif %}
-        
-                        {% endfor %}
-                        <br>
-                      </tr>
-                  {% endfor %}
-
-
-
-                
-    
-              </div>
-              </tbody>
-              </table>
 
 
     </div>
