--- a/walrus/walrus/templates/htmx_fragments/shift_week_schedule.html
+++ b/walrus/walrus/templates/htmx_fragments/shift_week_schedule.html
@@ -1,4 +1,4 @@
-    <div id="create-shift-form-container" hx-swap-oob="true">
+    <div id="create-shift-form-container" >
         <form hx-post="{%url 'schedule_employee' %}"
         hx-target="#create-shift-form-container"
         hx-swap="outerHTML">
@@ -7,20 +7,14 @@
                     
                     {{ schedule_form.as_p }}
                     <button name="save_shift"> Submit </button>
-                    </form>
-        </div>
 
 
 
 
-            <div id="week-schedule-form-container" hx-swap-oob="true">
-                <form hx-post="{%url 'schedule_employee' %}"
-                  hx-target="#week-schedule-form-container"
-                  hx-swap="outerHTML" >
+            
                     
                 <h3>All shifts for the week of: </h3>
             
-                {% csrf_token %}
             {{ select_week_form.as_p }}
             <button name="select_week_form"> Submit </button>
             
