got a good foundations for notifications.

--- a/walrus/walrus/templates/new_profile.html
+++ b/walrus/walrus/templates/new_profile.html
@@ -1,3 +1,7 @@
+{%extends 'base.html' %}
+{% block content %}
+
+
 {% load static %}
 
 <html lang="en"><head>
@@ -120,3 +124,5 @@
     </script>
     
     </body></html>
+
+{% endblock %}
