--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -1,3 +1,10 @@
+{%extends 'base.html' %}
+{% block content %}
+
+{%include 'htmx_fragments/noti.html'%}
+
+
+
 <html>
 
 
@@ -147,3 +154,4 @@
 </body>
 </html>
 
+{%endblock%}
