basics of notification system are working.

--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -1,7 +1,7 @@
 {%extends 'base.html' %}
 {% block content %}
 
-{%include 'htmx_fragments/noti.html'%}
+{%include 'htmx_fragments/notifications.html'%}
 
 
 
