--- a/walrus/walrus/static/css/home_page.css
+++ b/walrus/walrus/static/css/home_page.css
@@ -188,4 +188,9 @@ body{margin-top:20px;
             background-color:#fc1c03 !important;
             color: rgb(0, 0, 0) !important;
             } 
-   
+    .notification_read{
+        padding: 0;
+        border: none;
+        background: none;
+        color: #0d6efd !important;
+    }
