--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -1,12 +1,10 @@
 {%extends 'base.html' %}
 {% block content %}
 
-{%include 'htmx_fragments/notifications.html'%}
 
 
 
 <html>
-
 
 {% load static %}
 
@@ -50,8 +48,6 @@
       <br>
       <a href="{%url 'calendar' %}">Calendar </a>
       <br>
-      <a href= "/list_tasks/" > All Tasks </a>
-      <br>
       <a href="/shift_switch/{{ employee.pk }}">Shift Switch</a>
       <br>
       {%if user.employee.is_manager == 'Yes' %}
@@ -70,6 +66,25 @@
   </div>
 </div>
 </div>
+<div class="card">
+  <div class="tab-content p-4">
+  <div class="tab-pane active show" id="projects-tab" role="tabpanel">
+  <div class="d-flex align-items-center">
+  <div class="flex-1">
+  <h4 class="card-title mb-4">Alerts </h4>
+  {%include 'htmx_fragments/notifications.html'%}
+
+     
+  <h6 class="mb-0 text-muted">
+    <h5 class="mb-1 font-size-17 team-title"> 
+    </h5>
+    </h6>
+  </div>
+  </div>
+</div>
+</div>
+</div>
+
   <div class="card">
     <div class="tab-content p-4">
     <div class="tab-pane active show" id="projects-tab" role="tabpanel">
@@ -97,6 +112,10 @@
   </div>
 </div>
 </div>
+
+
+
+
   <div class="card">
   <div class="tab-content p-4">
   <div class="tab-pane active show" id="projects-tab" role="tabpanel">
