--- a/walrus/walrus/templates/registration/login.html
+++ b/walrus/walrus/templates/registration/login.html
@@ -26,7 +26,6 @@
   <div class="modal-dialog">
   <div class="modal-content">
   <div class="modal-header">
-  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
   <h1 class="text-center">Login</h1>
   </div>
   <div class="modal-body">
@@ -39,7 +38,7 @@
   </div>
   <div class="form-group">
   <button class="btn btn-primary btn-lg btn-block">Sign In</button>
-  <span class="pull-right"><a href="#">Register</a></span><span><a href="{%url 'password_reset' %}">Forgot password?</a></span>
+  <span class="pull-right"></span><span><a href="{%url 'password_reset' %}">Forgot password?</a></span>
   </div>
   </form>
   </div>
