--- a/walrus/walrus/templates/new_profile.html
+++ b/walrus/walrus/templates/new_profile.html
@@ -19,9 +19,10 @@
     <body style="">
     <div class="container">
     <div class="main-body">
+     
     
-    
-        &nbsp&nbsp&nbsp&nbsp<a href="{% url 'home' %}" class="button buttonGB">Go Back</a>
+        <a href="{% url 'home' %}" class="button buttonGB go_back">Go Back</a>
+    <br>
     <div class="row gutters-sm">
     <div class="col-md-4 mb-3">
     <div class="card">
