--- a/walrus/walrus/static/css/profile.css
+++ b/walrus/walrus/static/css/profile.css
@@ -11,7 +11,7 @@
     border-radius: .25rem;
     margin-bottom: 1.5rem;
     box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 2px 6px 0 rgb(206 206 238 / 54%);
-}
+} 
 .me-2 {
     margin-right: .5rem!important;
 }
@@ -19,3 +19,9 @@ body{
     background:#ffffff !important;
     margin-top:20px;
 }
+
+.go_back{
+    position: absolute; 
+    top: 10px; 
+    right: 300px;
+} 
