--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -35,7 +35,7 @@
   </div>
   </div>
   </div>
-  </div>
+  </div> 
   </div>
   <div class="card">
     <div class="tab-content p-4">
@@ -48,7 +48,7 @@
       <br>
       <a href="{%url 'calendar' %}">Calendar </a>
       <br>
-      <a href="/shift_switch/{{ employee.pk }}">Shift Switch</a>
+      <a href="/shift_switch/{{ employee.pk }}">Pick up a shift</a>
       <br>
       {%if user.employee.is_manager == 'Yes' %}
       <a href="{% url 'manager_tools' %}">Manager Tools</a>
