--- a/walrus/walrus/static/css/form.css
+++ b/walrus/walrus/static/css/form.css
@@ -5,6 +5,10 @@
 
 }
 
+.failure_button{
+  background-color:#bb1b09 !important;
+  color: rgb(0, 0, 0) !important;
+}
 
 .submit_task_update { 
     position: absolute; 
