--- a/walrus/walrus/templates/task_failure.html
+++ b/walrus/walrus/templates/task_failure.html
@@ -1,26 +1,91 @@
-<style>
-    body {
-        left      : 50%;
-        top       : 50%;
-        position  : absolute;
-        transform : translate(-50%, -50%);
-        background-color:beige;
-        font-size: 30px
-    }
-    input[type=checkbox]{
-        padding: 8px 20px;
-        margin: 4px 0;
-        background-color:#ff0000;
-    }
-</style>
-<body>
-    <b> WARNING: THIS CANNOT BE UNDONE. <br> 
-        READ FULLY! <br><br>
-        IF UNABLE TO COMPLETE THIS TASK, CLICK THE BOX LABLED 'TASK FAILED'. <br><br>
-        OTHERWISE, CLICK THE BUTTON LABLED 'GO HOME'<br><br></b>
-    <a href="{% url 'home' %}" class="button buttonGB">Go Home</a>
-    <form method = "POST"><br>
+
+<html>
+
+{% load static %}
+<html lang="en"><head>
+  <meta charset="utf-8">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="{% static '/css/home_page.css' %}">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+  </head>
+  <body style="">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.2.96/css/materialdesignicons.min.css" integrity="sha512-LX0YV/MWBEn2dwXCYgQHrpa9HJkwB+S+bnBpifSOTO1No27TqNMKYoAn6ff2FBh03THAzAiiCwQ+aPX+/Qt/Ow==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="{% static '/css/form.css' %}">
+
+
+  <form method="POST">
+    {% csrf_token %}
+  
+  <div class="container">
+  <div class="row">
+  <div class="col-xl-9">
+  <div class="card-body pb-0">
+  <div class="row align-items-center">
+  <div class="col-md-9">
+  <div class="ms-3">
+  <div class="row my-4">
+  <div class="col-md-12">
+  <div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  <h4>Task Failure</h4>
+  <a href="{% url 'home' %}" class="back_button">Go Back</a>
+
+  <div class="card">
+    <div class="tab-content p-4">
+    <div class="tab-pane active show" id="projects-tab" role="tabpanel">
+    <div class="d-flex align-items-center">
+    <div class="flex-1">
+        <b> WARNING: THIS CANNOT BE UNDONE. <br> 
+            READ FULLY! <br><br>
+            IF UNABLE TO COMPLETE THIS TASK, CLICK THE BOX LABLED 'TASK FAILED'. <br><br>
+            OTHERWISE, CLICK THE BUTTON LABLED 'GO HOME'<br><br></b>
+      <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ fail_form }}
-        <input type="Submit"  value="Submit" >
-    </form> 
+        {{ fail_form.as_p }}
+    
+        <input type="Submit"  class = "btn btn-primary px-4 failure_button" value="Submit" >
+     
+    </form>
+    </div>
+    </div>
+    </div>
+    </div>
+
+  </form>
+
+  
+
+    </div>
+</div>
+</div>
+</div>
+
+  </ul>
+ 
+ </script><script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="text/javascript"> 
+  </script>
+  </form>
+  </body></html>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
