--- a/walrus/walrus/static/css/home_page.css
+++ b/walrus/walrus/static/css/home_page.css
@@ -194,3 +194,9 @@ body{margin-top:20px;
         background: none;
         color: #0d6efd !important;
     }
+    .delete_shift{
+        padding: 0;
+        border: none;
+        background: none;
+        color: #fd110d !important;
+    }
