--- a/walrus/walrus/templates/htmx_fragments/avil_s.html
+++ b/walrus/walrus/templates/htmx_fragments/avil_s.html
@@ -1,3 +1,5 @@
+
+
 <div id="avil-form-container">
     <form hx-post="{%url 'schedule_employee' %}"
       hx-target="#avil-form-container"
@@ -5,7 +7,7 @@
     
                 <h3>Employees avilabilty</h3>
                 {{ search_form.as_p }}
-                <button name="search"> Submit </button>
+                <button name="search" class = "btn btn-primary px-4"> Submit </button>
               </form>
 
               <br>
