--- a/walrus/walrus/templates/htmx_fragments/shift_week_schedule.html
+++ b/walrus/walrus/templates/htmx_fragments/shift_week_schedule.html
@@ -1,4 +1,8 @@
-    <div id="create-shift-form-container" >
+{% load static %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.2.96/css/materialdesignicons.min.css" integrity="sha512-LX0YV/MWBEn2dwXCYgQHrpa9HJkwB+S+bnBpifSOTO1No27TqNMKYoAn6ff2FBh03THAzAiiCwQ+aPX+/Qt/Ow==" crossorigin="anonymous" referrerpolicy="no-referrer">
+<link rel="stylesheet" href="{% static '/css/form.css' %}">
+ 
+ <div id="create-shift-form-container" >
         <form hx-post="{%url 'schedule_employee' %}"
         hx-target="#create-shift-form-container"
         hx-swap="outerHTML">
@@ -6,7 +10,7 @@
                         <h3>schedule an employee</h3>
                     
                     {{ schedule_form.as_p }}
-                    <button name="save_shift"> Submit </button>
+                    <button name="save_shift" class = "btn btn-primary px-4"> Submit </button>
 
 
 
@@ -16,7 +20,7 @@
                 <h3>All shifts for the week of: </h3>
             
             {{ select_week_form.as_p }}
-            <button name="select_week_form"> Submit </button>
+            <button name="select_week_form" class = "btn btn-primary px-4"> Submit </button>
             
             <table class="table align-middle table-nowrap table-hover mb-0 " >
                 <thead class="table-light">
@@ -52,7 +56,7 @@
                             {%else%}
                             <td>{{attribute.start}} - {{attribute.end}}
                               <br>
-                              <button class ="btn btn-primary px-4" type="submit" name="delete" value="{{attribute.pk}}">Delete </button>
+                              <button class ="delete_shift" type="submit" name="delete" value="{{attribute.pk}}">Delete </button>
                              </td>
                             {% endif %}
                         {% endif %}
