--- a/walrus/walrus/templates/htmx_fragments/week_schedule.html
+++ b/walrus/walrus/templates/htmx_fragments/week_schedule.html
@@ -7,7 +7,7 @@
 
     {% csrf_token %}
 {{ select_week_form.as_p }}
-<button name="select_week_form"> Submit </button>
+<button name="select_week_form" class ="btn btn-primary px-4"> Submit </button>
 
 <table class="table align-middle table-nowrap table-hover mb-0 " >
     <thead class="table-light">
