each section of manager tools now redirects to the main manager_tools page when clicking 'go back'

--- a/walrus/walrus/templates/employee_stats.html
+++ b/walrus/walrus/templates/employee_stats.html
@@ -40,7 +40,7 @@
   </div>
   <title>Employee Statistics</title>
   <h3>Let's do some micromanaging!</h3>
-    <a href="{% url 'home' %}" class="back_button">Go Back</a>
+    <a href="{% url 'manager_tools' %}" class="back_button">Go Back</a>
 
   <div class="card">
     <div class="tab-content p-4">
