--- a/walrus/walrus/templates/create_project.html
+++ b/walrus/walrus/templates/create_project.html
@@ -36,7 +36,7 @@
   </div>
   </div>
   <h4>Create Project</h4>
-  <a href="{% url 'home' %}" class="back_button">Go Back</a>
+  <a href="{% url 'manager_tools' %}" class="back_button">Go Back</a>
 
   <div class="card">
     <div class="tab-content p-4">
