--- a/walrus/walrus/templates/schedule_employee.html
+++ b/walrus/walrus/templates/schedule_employee.html
@@ -27,7 +27,7 @@
   <div class="row my-4">
   <div class="col-md-12">
   <div>
-    <a href="{% url 'home' %}" class="back_button">Go Back</a>
+    <a href="{% url 'manager_tools' %}" class="back_button">Go Back</a>
   </div>
   </div>
   </div>
