--- a/walrus/walrus/templates/task_list.html
+++ b/walrus/walrus/templates/task_list.html
@@ -37,7 +37,7 @@
   </div>
   </div>
   <h4>Task Search</h4>
-  <a href="{% url 'home' %}" class="back_button">Go Back</a>
+  <a href="{% url 'manager_tools' %}" class="back_button">Go Back</a>
 
   <div class="card">
     <div class="tab-content p-4">
