--- a/walrus/walrus/static/css/form.css
+++ b/walrus/walrus/static/css/form.css
@@ -42,7 +42,7 @@
   }
 
 input[type=text] {
-        width: 800px;
+        width:50%;
         display: block;
         padding: 0.375rem 0.75rem;
         font-size: 1rem;
@@ -57,12 +57,13 @@ input[type=text] {
         appearance: none;
         border-radius: 0.375rem;
         transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+        resize:none;
     
     
   }
 
 input[textarea] {
-    
+        resize:none;
         display: block;
         padding: 0.375rem 0.75rem;
         font-size: 1rem;
@@ -77,13 +78,11 @@ input[textarea] {
         appearance: none;
         border-radius: 0.375rem;
         transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-        width: 400px !important;
-        height: 150px;
         text-align: left;
 }
 select {
         display: block;
-        width: 500px;
+        width: 50%;
 
         padding: 0.375rem 0.75rem;
         font-size: 1rem;
