forms should look better when page size changes.

--- a/walrus/walrus/templates/htmx_fragments/avil_s.html
+++ b/walrus/walrus/templates/htmx_fragments/avil_s.html
@@ -5,7 +5,7 @@
       hx-target="#avil-form-container"
       hx-swap="outerHTML">
     
-                <h3>Employees avilabilty</h3>
+                <h3>Employees Availability</h3>
                 {{ search_form.as_p }}
                 <button name="search" class = "btn btn-primary px-4"> Submit </button>
               </form>
