--- a/walrus/walrus/static/css/form.css
+++ b/walrus/walrus/static/css/form.css
@@ -10,7 +10,7 @@
   background-color:#fc1c03 !important;
   color: rgb(0, 0, 0) !important;
   position: absolute; 
-  top: 10px; 
+  top: 75px; 
   right: 10px; 
 }
 
@@ -31,11 +31,15 @@
     text-align:left;
     position: relative 
 }
-
+.manager_back_button{
+  position: absolute; 
+  top: 190px; 
+  right: 400px; 
+}
 .back_button {
     position: absolute; 
-    top: 55px; 
-    right: 500px; 
+    top: 10px; 
+    right: 10px; 
   }
 [type="date"] {
     
