--- a/walrus/walrus/templates/add_task.html
+++ b/walrus/walrus/templates/add_task.html
@@ -28,7 +28,7 @@
   <div class="row my-4">
   <div class="col-md-12">
   <div>
-    <a href="{% url 'manager_tools' %}" class="back_button">Go Back</a>
+    
   </div>
   </div>
   </div>
@@ -40,6 +40,7 @@
   
   <div class="card">
     <div class="tab-content p-4">
+      <a href="{% url 'manager_tools' %}" class="btn btn-primary px-4 back_button">Go Back</a>
       <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
