--- a/walrus/walrus/templates/employee_stats.html
+++ b/walrus/walrus/templates/employee_stats.html
@@ -40,10 +40,11 @@
   </div>
   <title>Employee Statistics</title>
   <h3>Let's do some micromanaging!</h3>
-    <a href="{% url 'manager_tools' %}" class="back_button">Go Back</a>
 
   <div class="card">
     <div class="tab-content p-4">
+      <a href="{% url 'manager_tools' %}" class="btn btn-primary px-4 back_button">Go Back</a>
+
       <form method="POST" action="{% url 'employee_stats' %}">
         {% csrf_token %}
         {{ form.as_p }}
