--- a/walrus/walrus/templates/manager_tools.html
+++ b/walrus/walrus/templates/manager_tools.html
@@ -5,16 +5,20 @@
    
   <link rel="stylesheet" href="{% static '/css/manager_tools.css' %}">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{% static '/css/form.css' %}">
+
 </head>
 
 {% block content %}
 <title>Manager Tools</title>
 <body class="parent-container">
+  <a href="{% url 'home' %}" class= "btn btn-primary px-4 manager_back_button">Go To Home</a>
 
         <form class="button-container" action="{% url 'manager_tools_redirect' %}" method="post">
-          <a href="{% url 'home' %}" class="back_button">Go Back</a>
+
 
         <h1 class="heading">Manager Tools</h1>
+
           {% csrf_token %}
           <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/add_task/">Add Tasks</button>
           <button class="btn btn-primary btn-lg btn-block" type="submit" name="destination" value="/create_project/">Create Project</button>
