updated more back buttons.

--- a/walrus/walrus/templates/new_profile.html
+++ b/walrus/walrus/templates/new_profile.html
@@ -21,12 +21,12 @@
     <div class="main-body">
      
     
-        <a href="{% url 'home' %}" class="button buttonGB go_back">Go Back</a>
     <br>
     <div class="row gutters-sm">
     <div class="col-md-4 mb-3">
     <div class="card">
     <div class="card-body">
+
     <div class="d-flex flex-column align-items-center text-center">
 
     
@@ -73,10 +73,17 @@
     </ul>
     </div>
     </div>
+
     <div class="col-md-8">
+
     <div class="card mb-3">
+
     <div class="card-body">
+        <br>
+
     <div class="row">
+        <a href="{% url 'home' %}" class="btn btn-primary px-4 back_button">Go To Home</a>
+
     <div class="col-sm-3">
     <h6 class="mb-0">Full Name</h6>
     </div>
