--- a/walrus/walrus/static/css/profile.css
+++ b/walrus/walrus/static/css/profile.css
@@ -20,8 +20,8 @@ body{
     margin-top:20px;
 }
 
-.go_back{
+.back_button {
     position: absolute; 
     top: 10px; 
-    right: 300px;
-} 
+    right: 10px; 
+  }
