--- a/walrus/walrus/templates/request_time_off.html
+++ b/walrus/walrus/templates/request_time_off.html
@@ -36,10 +36,11 @@
   </div>
   </div>
   <h4>Schedule Request</h4>
-  <a href="{% url 'home' %}" class="back_button">Go Back</a>
 
   <div class="card">
     <div class="tab-content p-4">
+      <a href="{% url 'home' %}" class="btn btn-primary px-4 back_button">Go To Home</a>
+
     <div class="tab-pane active show" id="projects-tab" role="tabpanel">
     <div class="d-flex align-items-center">
     <div class="flex-1">
