--- a/walrus/walrus/templates/availability.html
+++ b/walrus/walrus/templates/availability.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="{% static '/css/avil.css' %}">
 
 
+
   <form method="POST">
     {% csrf_token %}
   
@@ -30,7 +31,6 @@
   <div class="row my-4">
   <div class="col-md-12">
   <div> 
-    <a href="{% url 'home' %}" class="back_button">Go Back</a>
   </div>
   </div>
   </div>
@@ -41,11 +41,10 @@
   <h4>Edit your Avilability</h4>
 
   <div class="card avil_card">
+    <a href="{% url 'home' %}" class="btn btn-primary px-4 back_button">Go To Home</a>
+    <br>
+    <br>
     <div class="tab-content p-4">
-    <div class="tab-pane active show" id="projects-tab" role="tabpanel">
-    <div class="d-flex align-items-center">
-    <div class="flex-1">
-        
       <form method="POST">
         {% csrf_token %}
         
@@ -87,10 +86,15 @@
             </tbody>
             </table>
                
-
+        <br>
         <input type="Submit"  class = "btn btn-primary px-4" value="Save" >
      
     </form>
+    <div class="tab-pane active show" id="projects-tab" role="tabpanel">
+    <div class="d-flex align-items-center">
+    <div class="flex-1">
+        
+     
     </div>
     </div>
     </div>
