--- a/walrus/walrus/static/css/task_description.css
+++ b/walrus/walrus/static/css/task_description.css
@@ -7,6 +7,13 @@
 
 .go_back{
     position: absolute; 
-    top: 40px; 
-    left: 700px;
+    top: 10px; 
+    right: 10px;
 } 
+
+.edit_task{
+    position: absolute;
+    top: 60px;
+    right: 10px;
+
+}
