--- a/walrus/walrus/templates/home_page.html
+++ b/walrus/walrus/templates/home_page.html
@@ -16,7 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{% static '/css/home_page.css' %}">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
- 
+ <form>
   </head>
   <body style="">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.2.96/css/materialdesignicons.min.css" integrity="sha512-LX0YV/MWBEn2dwXCYgQHrpa9HJkwB+S+bnBpifSOTO1No27TqNMKYoAn6ff2FBh03THAzAiiCwQ+aPX+/Qt/Ow==" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -37,6 +37,7 @@
   </div>
   </div> 
   </div>
+  <form>
   <div class="card">
     <div class="tab-content p-4">
     <div class="tab-pane active show" id="projects-tab" role="tabpanel">
@@ -66,6 +67,7 @@
   </div>
 </div>
 </div>
+
 <div class="card">
   <div class="tab-content p-4">
   <div class="tab-pane active show" id="projects-tab" role="tabpanel">
@@ -85,37 +87,9 @@
 </div>
 </div>
 
-  <div class="card">
-    <div class="tab-content p-4">
-    <div class="tab-pane active show" id="projects-tab" role="tabpanel">
-    <div class="d-flex align-items-center">
-    <div class="flex-1">
-      {% if shift.start is not None %}
-    <h4 class="card-title mb-4">Todays Shift {{shift.start}} -  {{shift.end}}</h4>
-    
-        {% if shift.to_be_taken == False %}
-    
-        <button class ="btn btn-primary px-4 clock_in" type="submit" name="to_be_taken" value="{{shift.pk}}"> Request to be taken </button>
-        {%else%}
-        <button class ="btn btn-primary px-4 clock_in" type="submit" name="to_be_taken" value="{{shift.pk}}"> Cancel to be taken </button>
-        {%endif%}
-        <button class ="btn btn-primary px-4 shift_in" type="submit" name="shift_clock_in" value="{{shift.pk}}"> clock in</button>
-      {%else%}
-      <h4 class="card-title mb-4">Todays Shift </h4>
-      {%endif%}
-      
 
 
-    <h6 class="mb-0 text-muted">
-      <h5 class="mb-1 font-size-17 team-title">{{x.task_name}}  
-      </h5>
-      </h6>
-    </div>
-    </div>
-  </div>
-</div>
-</div>
-
+{%include 'htmx_fragments/home_shift.html'%}
 
 {%include 'htmx_fragments/home_page_tasks.html'%}
 
