--- a/walrus/walrus/templates/htmx_fragments/home_shift.html
+++ b/walrus/walrus/templates/htmx_fragments/home_shift.html
@@ -26,7 +26,7 @@
           {%else%}
           <button class ="btn btn-primary px-4 clock_in" type="submit" name="to_be_taken" value="{{shift.pk}}"> Cancel to be taken </button>
           {%endif%}
-          <button class ="btn btn-primary px-4 shift_in" type="submit" name="shift_clock_in" value="{{shift.pk}}"> clock in</button>
+          <button class ="btn btn-primary px-4 shift_in" type="submit" name="shift_in" value="{{shift.pk}}"> clock in</button>
         {%else%}
         <h4 class="card-title mb-4">Todays Shift </h4>
         {%endif%}
