--- a/walrus/walrus/templates/htmx_fragments/home_shift.html
+++ b/walrus/walrus/templates/htmx_fragments/home_shift.html
@@ -7,7 +7,7 @@
 
   
     <form hx-post="{%url 'home_page' employee_id=employee_id day=day month=month year=year%}" 
-    hx-target="#home-task-container"
+    hx-target="#home-shift-container"
     hx-swap="outerHTML">
   
  
